Demo: Disable all previews on MJ 2.4-2.6.  They're invisible anyway. No change for 2.5, 2.6, *maybe* a few percent faster on 2.4.

--- a/demo.html
+++ b/demo.html
@@ -54,8 +54,13 @@
         tex2jax: {
           inlineMath: [ ['$','$'], ["\\(","\\)"] ],
           displayMath: [ ['$$','$$'], ["\\[","\\]"] ],
-          processEscapes: true
+          processEscapes: true,
+          /* Previews of all kinds are useless — math is hidden until fully rendered. */
+          preview: "none"
         },
+        /* "CHTML-preview" is for MathJax 2.5, "fast-preview" is for 2.6. */
+        "CHTML-preview": { disabled: true },
+        "fast-preview": { disabled: true },
         TeX: { noErrors: { disabled: true },
                equationNumbers: { autoNumber: "AMS" },
                extensions: ["autoload-all.js"] }
