Demo: fix missing param in loading MathJax from cdnjs.

--- a/demo.html
+++ b/demo.html
@@ -68,8 +68,7 @@
     </script>
     <!-- Safe extension (http://docs.mathjax.org/en/latest/safe-mode.html)
          only needed if editor content may be controlled by other users. -->
-    <!-- using "data-url" to avoid trailing .js in default cdnjs template. -->
-    <script src="version.js/build/version.js" data-ver="2.4.0" data-param="mathjax" data-url="cdnjs" data-file="MathJax.js" data-suffix="?config=TeX-AMS_HTML-full,Safe"></script>
+    <script src="version.js/build/version.js" data-ver="2.4.0" data-param="mathjax" data-url="cdnjs" data-lib="mathjax" data-file="MathJax.js" data-suffix="?config=TeX-AMS_HTML-full,Safe"></script>
   </head>
   <body>
     <h1>attempt at CodeMirror + in-place MathJax
