Hopefully fix #41: Use temp marker to track range while typesetting. I didn't now manage to reproduce an edit/typeset race so can't truly confirm this fixes it.  It should but is it bug-free?
Perf impact: up to 20% with MJ 2.4, negligible with slow MJ 2.6.

TODO: rewrite into "state machine" style where edits immediately update
markers and the markers themselves manage going through various states
(typesetting/typeset/reveal).

--- a/demo.html
+++ b/demo.html
@@ -47,6 +47,7 @@
          squishing formulas, especially display. */
       .cm-comment.inline_math, .cm-comment.display_math { font-family: serif; }
       .display_math { width:100%; }
+      .math-typesetting { opacity: 0.7; }  /* retain colors but make them weaker */
     </style>
 
     <script type="text/x-mathjax-config">
