--- a/demo.html
+++ b/demo.html
@@ -81,14 +81,14 @@
 	<option value="2.3.0">2.3.0</option>
 	<option value="2.4.0" selected>2.4.0</option>
 	<option value="2.5.3">2.5.3</option>
-	<option value="2.6.0-beta.1">2.6.0-beta.1</option>
+	<option value="2.6.1">2.6.1</option>
       </select> |
       CodeMirror version: <select name="codemirror">
 	<option value="3.24.0">3.24.0</option>
 	<option value="4.8.0">4.8.0</option>
 	<option value="4.13.0">4.13.0</option>
 	<option value="5.0.0">5.0.0</option>
-	<option value="5.7.0" selected>5.7.0</option>
+	<option value="5.11.0" selected>5.11.0</option>
       </select>
       <input type="submit" value="Load"></input> (for any other versions edit URL params)
     </form>
